Work exp timeline item circle alignment fix

--- a/index.css
+++ b/index.css
@@ -276,7 +276,7 @@ body.dark-theme .photo img {
         background-color: #ddd;
         border-radius: 50%;
         position: absolute;
-        left: -5px;
+        left: -6px;
         top: 15px;
       }
   
